# clicky

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  async_worker.py  autocomplete_manager.py  build_mac_app.sh  clicky.spec  config.py  credentials_manager.py  data_explorer.py  database.py  fix_test_imports.py  font_manager.py  icon_manager.py  main.py  main.spec  pyproject.toml  query_executor.py  requirements.txt  run_tests.py  theme_manager.py  ui_components.py  utils.py
Casks/: clicky.rb
components/: __init__.py  connection_manager.py  credentials_ui.py  query_interface.py  splash_screen.py  splitter.py  status_manager.py  table_browser.py  table_browser_ui.py  ui_layout.py
docs/: CLOSE_EXPLORER_ICON_REMOVAL.md  COLUMN_TYPE_ENHANCEMENT.md  CONNECTION_FORM_LAYOUT_GUIDE.md  COPY_FEATURE_DOCS.md  CREDENTIALS_PERMISSION_FIX.md  FINAL_PROJECT_STATUS.md  FIX_COMPLETION_SUMMARY.md  ICON_UPDATE_SUMMARY.md  MANUAL_COLUMN_RESIZING.md  PANEL_LAYOUT_ENHANCEMENT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_ORGANIZATION_COMPLETE.md  QUERY_COPY_FEATURE.md  TEST_ORGANIZATION_UPDATE.md  UI_STATUS_FIX_COMPLETE.md
tests/: README.md  __init__.py  debug_connection_status.py  debug_status_issue.py  debug_table_loading.py  demo_column_types.py  diagnose_auto_connect.py  final_validation.py  fix_imports.py  simple_debug.py  test_all_fixes.py  test_bundled_fonts.py  test_column_resizing.py  test_column_types.py  test_column_types_simple.py  test_comprehensive_fixes.py  test_config.py  test_connect_logic.py  test_copy_functionality.py  test_core_logic.py  test_credential_fix.py  (+21 more)
(+3 files in other folders)
