[project]
name = "clicky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "cryptography>=45.0.5",
    "dearpygui>=2.1.0",
    "pyinstaller>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
