[project]
name = "clicky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "cryptography>=45.0.5",
    "dearpygui>=2.1.0",
    "pyinstaller>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.9.6",
    "pre-commit>=4.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [".venv", "venv", "__pycache__", ".ruff_cache", "dist", "build"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108",  # ternary operator
    "SIM105",  # contextlib.suppress — too noisy for DearPyGUI try/except patterns
    "SIM117",  # combine with statements — DearPyGUI context managers need nesting
    "F403",    # star imports (DearPyGUI pattern)
    "F405",    # may be undefined from star imports
    "E501",    # line too long — ruff format handles code; comments/docstrings are fine
]

[tool.ruff.lint.isort]
known-first-party = ["components"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
